promise all is returning data, but not compiling the data correctly

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 			opacity: 0.5;
 			stroke: black;
 		}
+		
+	.yearselect{
+			color: purple;
+		}
+		.greyout{
+			color: grey;
+		}
+
+	
 	</style>
 </head>
 <body>
