drawing 1 set of bubbles. it works so far

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 		</form>
 
 		<!--fixed svg header/x-axis labels -->
-		
-		<!--scrolling svg group -->
+		<div id="svg-header"></div>
 
+		<!--scrolling svg group -->
+		<div id="svg-main"></div>
+		
 		<!-- footer -->
 		
 	</div>
