--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 	<title>Reddit Bubble Timeline</title>
 	<link rel="stylesheet" href="node_modules/spectre.css/dist/spectre.min.css" />
 	<style>
+		body{
+			background-color:#eaeaea;
+		}
 		.bub{
-			opacity: 0.5;
-			stroke: black;
+			//opacity: 0.5;
+			stroke: white;
+			fill: black;
+			stroke-width: 1;
+			shape-rendering: crispEdges;
 		}
 		
 	.yearselect{
@@ -15,7 +21,9 @@
 		.greyout{
 			color: grey;
 		}
-
+		.svg-header{
+			width: 100%;
+		}
 	
 	</style>
 </head>
@@ -47,7 +55,7 @@
 
 		<!--scrolling svg group -->
 		<div id="svg-main"></div>
-		
+
 		<!-- footer -->
 		
 	</div>
