--- a/index.html
+++ b/index.html
@@ -1,64 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Reddit Bubble Timeline</title>
 	<link rel="stylesheet" href="node_modules/spectre.css/dist/spectre.min.css" />
-	<style>
-		body{
-			background-color:#eaeaea;
-		}
-		.bub{
-			//opacity: 0.5;
-			stroke: white;
-			fill: black;
-			stroke-width: 1;
-			shape-rendering: crispEdges;
-		}
-		
-	.yearselect{
-			color: red;
-		}
-		.greyout{
-			color: grey;
-		}
-		.svg-header{
-			width: 100%;
-		}
-	
-	</style>
+	<link rel="stylesheet" href="style.css" />
 </head>
-<body>
-	<div id="root">
-		<p>Top Reddit Posts by Month</p>
-		<form id="mainform centered">
-			<div class="btn-group">
-				<button class="btn yearselect" value="2017">2017td</button>
-				<button class="btn yearselect" value="2016">2016</button>
-				<button class="btn yearselect" value="2015">2015</button>
-				<button class="btn yearselect" value="2014">2014</button>
-				<button class="btn yearselect" value="2013">2013</button>
-				<button class="btn yearselect" value="2012">2012</button>
-			</div>
-			<br/>
-			<div class="btn-group">
-				<button class="btn articleCount" id="plusArtCt" value="plus">+</button>
-				<button disabled id="articleCountIndicator">0</button>
-				<button class="btn articleCount" id="minusArtCt">-</button>
-			</div>
-			<input id="submitbutton" type="submit" value="Update" >
-			</div>
+
+<body class="container">
+	<div class="columns">
+		<div class="column col-12">
+			<h2>Top Reddit Posts by Month</h2>
+		</div>
+
+		<div id="formbox" class="column col-4">
 			
-		</form>
+			<form id="mainform centered">
+				<div class="btn-group">
+					<button class="btn yearselect" value="2017">2017td</button>
+					<button class="btn yearselect" value="2016">2016</button>
+					<button class="btn yearselect" value="2015">2015</button>
+					<button class="btn yearselect" value="2014">2014</button>
+					<button class="btn yearselect" value="2013">2013</button>
+					<button class="btn yearselect" value="2012">2012</button>
+				</div>
+				<br/>
+				<div class="btn-group">
+					<button class="btn articleCount" id="plusArtCt" value="plus">+</button>
+					<button disabled id="articleCountIndicator">0</button>
+					<button class="btn articleCount" id="minusArtCt">-</button>
+				</div>
+				<input id="submitbutton" type="submit" value="Update">
+			</form>
+		</div>
+	</div>
 
-		<!--fixed svg header/x-axis labels -->
-		<div id="svg-header"></div>
 
-		<!--scrolling svg group -->
-		<div id="svg-main"></div>
+	<!--fixed svg header/x-axis labels -->
+	<div class="columns">
+		<div class="column col-1"></div>
+		<div id="svg-header" class="column col-10"></div>
+		<div class="column col-1"></div>
+	</div>
 
-		<!-- footer -->
-		
+	<!--scrolling svg group -->
+	<div class="columns">
+		<div class="column col-1"></div>
+		<div id="svg-main" class="column col-10"></div>
+		<div class="column col-1"></div>
+	</div>
+
 	</div>
 	<script src="dist/bundle.js"></script>
 </body>
+
 </html>
