--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 
 <body class="container">
 	<div class="columns">
-		<div class="column col-12">
-			<h2>Top Reddit Posts by Month</h2>
+		<div class="column col-12 center-text">
+			<h2>Top Reddit Posts by Year and Sub</h2>
 		</div>
 
-		<div id="formbox" class="column col-4">
+		<div id="formbox" class="column col-3">
 			
 			<form id="mainform centered">
 				<div class="btn-group">
-					<button class="btn yearselect" value="2017">2017td</button>
+					<button class="btn yearselect" value="2017">2017*</button>
 					<button class="btn yearselect" value="2016">2016</button>
 					<button class="btn yearselect" value="2015">2015</button>
 					<button class="btn yearselect" value="2014">2014</button>
 					<button class="btn yearselect" value="2013">2013</button>
 					<button class="btn yearselect" value="2012">2012</button>
 				</div>
+				<div class="year-footnote">*2017 is year to-date</div>
 				<br/>
 				<div class="btn-group">
 					<button class="btn articleCount" id="plusArtCt" value="plus">+</button>
