--- a/index.html
+++ b/index.html
@@ -24,21 +24,24 @@
 
 		<div id="formbox" class="column col-3">
 			
-			<form id="mainform centered">
+			<form id="mainform">
 				<div class="instruct">1. Select a year.</div>
-				<div class="btn-group">
-					<button class="btn yearselect" value="2017">2017*</button>
-					<button class="btn yearselect" value="2016">2016</button>
-					<button class="btn yearselect" value="2015">2015</button>
-					<button class="btn yearselect" value="2014">2014</button>
-					<button class="btn yearselect" value="2013">2013</button>
-					<button class="btn yearselect" value="2012">2012</button>
+				<div class="centered yearbox">
+					<div class="btn-group">
+						<button class="btn yearselect" value="2017">2017*</button>
+						<button class="btn yearselect" value="2016">2016</button>
+						<button class="btn yearselect" value="2015">2015</button>
+						<button class="btn yearselect" value="2014">2014</button>
+						<button class="btn yearselect" value="2013">2013</button>
+						<button class="btn yearselect" value="2012">2012</button>
+					</div>
+					<div class="year-footnote">*2017 is year to-date</div>
 				</div>
-				<div class="year-footnote">*2017 is year to-date</div>
+				
 				
 				<div class="instruct">2. Choose the number of posts per year:</div> 
-				<div class="centerdiv">
-					<div class="btn-group centerdiv">
+				<div class="centered articlecountbox">
+					<div class="btn-group">
 						<button class="btn articleCount" id="plusArtCt" value="plus">+</button>
 						<button disabled id="articleCountIndicator">0</button>
 						<button class="btn articleCount" id="minusArtCt">-</button>
@@ -52,22 +55,12 @@
 	</div>
 
 
-	<!--fixed svg header/x-axis labels -->
-	<div class="columns">
-		<div class="column col-1"></div>
-		<div id="svg-header" class="column col-10"></div>
-		<div class="column col-1"></div>
-	</div>
-
 	<!--scrolling svg group -->
 	<div class="columns">
 		<div class="column col-1"></div>
 		<div id="svg-main" class="column col-10"></div>
 		<div class="column col-1"></div>
 	</div>
-
-	</div>
-	<script src="dist/bundle.js"></script>
 </body>
-
+<script src="dist/bundle.js"></script>
 </html>
