--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 	<link rel="stylesheet" href="node_modules/spectre.css/dist/spectre.min.css" />
 	<link rel="stylesheet" href="style.css" />
 	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)		
+}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
 		ga('create', 'UA-15876167-6', 'auto');
 		ga('send', 'pageview');
@@ -23,7 +25,7 @@
 		</div>
 
 		<div id="formbox" class="column col-3">
-			
+
 			<form id="mainform">
 				<div class="instruct">1. Select a year.</div>
 				<div class="centered yearbox">
@@ -37,9 +39,9 @@
 					</div>
 					<div class="year-footnote">*2017 is year to-date</div>
 				</div>
-				
-				
-				<div class="instruct">2. Choose the number of posts per year:</div> 
+
+
+				<div class="instruct">2. Choose the number of posts per year:</div>
 				<div class="centered articlecountbox">
 					<div class="btn-group">
 						<button class="btn articleCount" id="plusArtCt" value="plus">+</button>
@@ -55,12 +57,33 @@
 	</div>
 
 
-	<!--scrolling svg group -->
+	<!-- svg group -->
 	<div class="columns">
 		<div class="column col-1"></div>
 		<div id="svg-main" class="column col-10"></div>
 		<div class="column col-1"></div>
 	</div>
+
+	<div class="card-container columns">
+		<div id="popup-card" class="card col-3 centered hide">
+			<button id="closeCardBtn" class="btn btn-clear"></button>
+			<div class="card-image">
+				<img class="img-responsive" />
+			</div>
+			<div class="card-header">
+				<h4 class="card-title">Microsoft</h4>
+				<h6 class="card-subtitle">Software and hardware</h6>
+			</div>
+			<div class="card-body">
+				Empower every person and every organization on the planet to achieve more.
+			</div>
+			<div class="card-footer">
+				<button class="btn btn-primary">Do</button>
+			</div>
+		</div>
+	</div>
+
 </body>
 <script src="dist/bundle.js"></script>
+
 </html>
