starting to make articles launch in iframe instead of bouncing out of page

--- a/index.html
+++ b/index.html
@@ -65,22 +65,30 @@
 	</div>
 
 	<div class="card-container columns">
-		<div id="popup-card" class="card col-3 centered hide">
+		<div id="popup-card" class="card col-6 centered hide">
 			<button id="closeCardBtn" class="btn btn-clear"></button>
 			<div class="card-image">
 				<img class="img-responsive" />
 			</div>
-			<div class="card-header">
-				<h4 class="card-title">Microsoft</h4>
-				<h6 class="card-subtitle">Software and hardware</h6>
-			</div>
 			<div class="card-body">
 				Empower every person and every organization on the planet to achieve more.
 			</div>
+			<div class="card-header">
+				<h4 class="card-title">Microsoft</h4>
+				<h6 class="card-subtitle">Software and hardware</h6>
+				<h6 class="card-subtitle2">Software and hardware</h6>
+			</div>
+			
 			<div class="card-footer">
-				<button class="btn btn-primary">Do</button>
+				<a id="" href="#" onclick="doNothing" class="artlink btn btn-primary">Link</a>
 			</div>
 		</div>
+	</div>
+
+	<div class="newsframe columns">
+		<iframe class="artlink iframe centered" style="width: 300px; height: 200px;"> 
+			<p>Your browser does not support iframes.</p>
+		</iframe>
 	</div>
 
 </body>
