--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				</div>
 
 
-				<div class="instruct">2. Choose the number of posts per year:</div>
+				<div class="instruct">2. Choose the number of posts per year.</div>
 				<div class="centered articlecountbox">
 					<div class="btn-group">
 						<button class="btn articleCount" id="plusArtCt" value="plus">+</button>
@@ -50,8 +50,8 @@
 					</div>
 				</div>
 
-				<div class="instruct">3. Press update button</div>
-				<input id="submitbutton" type="submit" value="Update">
+				<div class="instruct">3. Press update button.</div>
+				<input id="submitbutton" class="centered" type="submit" value="Update">
 			</form>
 		</div>
 	</div>
@@ -68,7 +68,7 @@
 		<div id="popup-card" class="card col-6 centered hide">
 			<button id="closeCardBtn" class="btn btn-clear"></button>
 			<div class="card-image">
-				<img class="img-responsive" />
+				<img class="maxsize img-responsive centered" />
 			</div>
 			<div class="card-body">
 				Empower every person and every organization on the planet to achieve more.
@@ -83,12 +83,6 @@
 				<a id="" href="#" onclick="doNothing" class="artlink btn btn-primary">Link</a>
 			</div>
 		</div>
-	</div>
-
-	<div class="newsframe columns">
-		<iframe class="artlink iframe centered" style="width: 300px; height: 200px;"> 
-			<p>Your browser does not support iframes.</p>
-		</iframe>
 	</div>
 
 </body>
