basic tool tip now functional. needs some formatting. made other small css changes too

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 </head>
 
 <body class="container">
-	<div id="tooltip" class="hidden">
-		<p><strong>Percentage Value</strong></p>
-		<p><span id="value">100</span>%</p>
-	</div>
+	
 
 	<div class="columns">
 		<div class="column col-12 center-text">
@@ -69,28 +66,11 @@
 		<div class="column col-1"></div>
 	</div>
 
-	<!--
-	<div class="card-container columns">
-		<div id="popup-card" class="card col-6 centered hide">
-			<button id="closeCardBtn" class="btn btn-clear"></button>
-			<div class="card-image">
-				<img class="maxsize img-responsive centered" />
-			</div>
-			<div class="card-body">
-				Empower every person and every organization on the planet to achieve more.
-			</div>
-			<div class="card-header">
-				<h4 class="card-title">Microsoft</h4>
-				<h6 class="card-subtitle">Software and hardware</h6>
-				<h6 class="card-subtitle2">Software and hardware</h6>
-			</div>
-			
-			<div class="card-footer">
-				<a id="" href="#" onclick="doNothing" class="artlink btn btn-primary">Link</a>
-			</div>
-		</div>
+	<div id="tooltip" class="hidden">
+		<p><strong>Percentage Value</strong></p>
+		<p><span id="value">100</span></p>
 	</div>
-	-->
+	
 
 </body>
 <script src="dist/bundle.js"></script>
