end of day update

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
 	</div>
 
 	<div id="tooltip" class="hidden">
-		<p><strong>Percentage Value</strong></p>
-		<p><span id="value">100</span></p>
+		<span id="title">Title</span>
+		<span id="value">100</span>
+		<a href="#">Link</a>
+		<span id="date">4/18</span>
 	</div>
 	
 
