--- a/index.html
+++ b/index.html
@@ -66,11 +66,18 @@
 		<div class="column col-1"></div>
 	</div>
 
-	<div id="tooltip" class="hidden">
-		<span id="title">Title</span>
-		<span id="value">100</span>
-		<a href="#">Link</a>
-		<span id="date">4/18</span>
+	<div class="tooltip" id="tooltip" class="hidden">
+		<div class="float-right">
+			<button id="close-box" class="btn btn-clear"></button>
+		</div>
+		<div class="tool-toprow">
+			<span id="date">4/18</span>
+			<span class="tool-score" id="value">1k</span>
+		</div>
+		<div class="divider"></div>
+		<div class="tool-title" id="title">Title</div>
+		<a class="tool-link btn btn-primary" href="#">Link</a>
+		
 	</div>
 	
 
